# aegis

./: .pre-commit-config.yaml  LICENSE  README.md  agent.py  docker-compose.yml  main.py  mypy.txt  pyproject.toml  todos.md
agent/: __init__.py  agent.py
agent/custom_toolkits/: __init__.py
agent/executor/: base_executor.py  dag_executor.py
agent/internal_toolkits/: __init__.py  db_access.py  schema_validator.py
agent/llm/: gemini_client.py
agent/models/: __init__.py  edge.py  enums.py  io_types.py  skill.py  task.py  toolkit.py
agent/privacy/: base_approval.py  cli_approval.py  spacy_scrubber.py
agent/registry/: skill_registry.py  toolkit_registry.py
agent/sandbox/: subprocess_runner.py
agent/schemas/: skill_schema.json  validator.py
agent/seeds/: seed_loader.py
agent/store/: database.py  orm_models.py  skill_repository.py  task_repository.py  toolkit_repository.py  user_preferences.py
api/handlers/: display_handler.py  execution_handler.py  feedback_handler.py  intent_handler.py  setup_handler.py
core/container/: base_runner.py  subprocess_runner.py
core/vector/: base.py  enums.py
helpers/executor/: approval.py  base_executor.py  dag_executor.py  node_runner.py  policy.py
internal_toolkits/: db_access.py  schema_validator.py
models/: __init__.py  edge.py  io_types.py  skill.py  task.py
registry/: __init__.py  skill_registry.py  toolkit_registry.py
scripts/: e2e_feedback.py  e2e_run.py
seeds/: seed_loader.py
tests/: conftest.py  test_dag_executor.py  test_integration.py  test_models.py  test_schema_validator.py
(+48 files in other folders)
